[package]
name = "rpiOS"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = ["bsp_rpi3"]
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = "7.0.0"
tock-registers = "0.7.0"
